--- a/index.html
+++ b/index.html
@@ -1,20 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AJAX Project</title>
+  <title>Book Club</title>
   <link rel="icon" href="images/favicon.ico">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/layout.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
+
 <body>
-  <header>
-  </header>
-  <main>
-  </main>
+  <div class="container  ">
+    <div class="px-4 py-5 my-5">
+      <h1 class="display-5 fw-bold text-body-emphasis text-center">Book Club</h1>
+      <div class="col-lg-8 mx-auto">
+        <p class="lead mb-4 text-center">Welcome! What book would you like to read?</p>
+        <form id="myForm" class="row row-cols-lg-auto g-3">
+          <label class="visually-hidden" for="inlineFormInputGroupUsername">Search Book Title</label>
+          <div class="input-group">
+            <input type="text" class="form-control" id="search" placeholder="Search Book Title">
+            <input class="btn btn-primary" type="submit" value="Submit">
+          </div>
+        </form>
+        <p class="lead my-4 text-center">When do you want to finish your book?</p>
+        <div class="row my-4">
+          <div class="col-lg-3 my-2 needs-validation">
+            <select class="form-select" aria-label="Default select example" id="validationCustom01" required>
+              <option value="1" selected>January</option>
+              <option value="2">February</option>
+              <option value="3">March</option>
+              <option value="4">April</option>
+              <option value="5">May</option>
+              <option value="6">June</option>
+              <option value="7">July</option>
+              <option value="8">August</option>
+              <option value="9">September</option>
+              <option value="10">October</option>
+              <option value="11">November</option>
+              <option value="12">December</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select a valid month.
+            </div>
+          </div>
+          <div class="col-lg-3 my-2">
+            <select class="form-select" aria-label="Default select example" id="validationCustom02" required>
+              <option value="1" selected>1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+              <option value="6">6</option>
+              <option value="7">7</option>
+              <option value="8">8</option>
+              <option value="9">9</option>
+              <option value="10">10</option>
+              <option value="11">11</option>
+              <option value="12">12</option>
+              <option value="13">13</option>
+              <option value="14">14</option>
+              <option value="15">15</option>
+              <option value="16">16</option>
+              <option value="17">17</option>
+              <option value="18">18</option>
+              <option value="19">19</option>
+              <option value="20">20</option>
+              <option value="21">21</option>
+              <option value="22">22</option>
+              <option value="23">23</option>
+              <option value="24">24</option>
+              <option value="25">25</option>
+              <option value="26">26</option>
+              <option value="27">27</option>
+              <option value="28">28</option>
+              <option value="29">29</option>
+              <option value="30">30</option>
+              <option value="31">31</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select a valid date.
+            </div>
+          </div>
+          <div class="col-lg-3 my-2">
+            <select class="form-select" aria-label="Default select example" id="validationCustom03" required>
+              <option value="default" selected>Default</option>
+              <option value="2023">2023</option>
+              <option value="2024">2024</option>
+              <option value="2025">2025</option>
+              <option value="2026">2026</option>
+            </select>
+            <div class="invalid-feedback">
+              Please select a valid year.
+            </div>
+          </div>
+          <div class="col-lg-3 my-2">
+            <button class="btn btn-primary float-start" id="theDateBtn">Submit</button>
+          </div>
+          <ul id="user-list"></ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <h1 class="display-5 fw-bold text-body-emphasis text-center">Search Results</h1>
+    <div class="row">
+      <div class="col-lg-3 text-center" id="book0">
+      </div>
+      <div class="col-lg-3 text-center" id="book1">
+      </div>
+      <div class="col-lg-3 text-center" id="book2">
+      </div>
+      <div class="col-lg-3 text-center" id="book3">
+      </div>
+    </div>
+  </div>
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
