--- a/index.html
+++ b/index.html
@@ -106,15 +106,19 @@
     </div>
   </div>
   <div class="container">
-    <h1 class="display-5 fw-bold text-body-emphasis text-center">Search Results</h1>
-    <div class="row">
-      <div class="col-lg-3 text-center" id="book0">
+    <h1 class="display-5 fw-bold text-body-emphasis text-center my-4">Search Results</h1>
+    <div class="row my-4">
+      <div class="col-lg-3 col-xs-6 text-center" id="book0">
+
       </div>
-      <div class="col-lg-3 text-center" id="book1">
+      <div class="col-lg-3 col-xs-6 text-center" id="book1">
+
       </div>
-      <div class="col-lg-3 text-center" id="book2">
+      <div class="col-lg-3 col-xs-6 text-center" id="book2">
+
       </div>
-      <div class="col-lg-3 text-center" id="book3">
+      <div class="col-lg-3 col-xs-6 text-center" id="book3">
+
       </div>
     </div>
   </div>
