--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 
-<body>
+<body class="base">
   <div class="container">
-    <h1 class="display-5 fw-bold text-center text-navy">Book Club</h1>
+    <h1 class="display-5 my-4 fw-bold text-center text-navy">Book Club</h1>
     <div class="col-lg-8 mx-auto visually" id="searchSection">
       <p class="lead mb-4 text-center text-navy">Welcome! What book would you like to read?</p>
       <form class="row row-cols-lg-auto g-3">
         <label class="visually-hidden" for="inlineFormInputGroupUsername">Search Book Title</label>
-        <div class="input-group">
-          <input type="text" class="form-control" id="search" placeholder="Search Book Title">
+        <div class="input-group text-navy">
+          <input type="text" class="text-navy form-control-styled" id="search" placeholder="Search Book Title">
         </div>
       </form>
       <p class="lead my-4 text-center text-navy">When do you want to finish your book?</p>
       <div class="row my-4">
         <div class="col-lg-3 my-2 needs-validation">
-          <select class="form-select" aria-label="Default select example" id="validationCustom01" required>
+          <select class="form-select-styled" aria-label="Default select example" id="validationCustom01" required>
             <option value="1" selected>January</option>
             <option value="2">February</option>
             <option value="3">March</option>
@@ -49,7 +49,7 @@
           </div>
         </div>
         <div class="col-lg-3 my-2">
-          <select class="form-select" aria-label="Default select example" id="validationCustom02" required>
+          <select class="form-select-styled" aria-label="Default select example" id="validationCustom02" required>
             <option value="1" selected>1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -87,7 +87,7 @@
           </div>
         </div>
         <div class="col-lg-3 my-2">
-          <select class="form-select" aria-label="Default select example" id="validationCustom03" required>
+          <select class="form-select-styled" aria-label="Default select example" id="validationCustom03" required>
             <option value="default" selected>Default</option>
             <option value="2023">2023</option>
             <option value="2024">2024</option>
@@ -98,31 +98,26 @@
             Please select a valid year.
           </div>
         </div>
-
         <ul id="user-list"></ul>
       </div>
       <div class="row">
         <div class="col-lg-3 my-2">
-          <button class="btn btn-primary float-start" id="theSubmitBtn">Submit</button>
+          <button class="btn-primary btn-primary-gray float-start" id="theSubmitBtn">Submit</button>
         </div>
       </div>
     </div>
   </div>
   <!-- Search Results -->
   <div class="container visually-hidden" id="searchResultsSection">
-    <h1 class="display-5 fw-bold text-center my-4">Search Results</h1>
+    <h1 class="fw-bold text-center my-4 text-navy">Search Results</h1>
     <div class="row my-4">
       <div class="col-lg-3 col-xs-6 text-center book" id="book0">
-
       </div>
       <div class="col-lg-3 col-xs-6 text-center book" id="book1">
-
       </div>
       <div class="col-lg-3 col-xs-6 text-center book" id="book2">
-
       </div>
       <div class="col-lg-3 col-xs-6 text-center book" id="book3">
-
       </div>
     </div>
   </div>
@@ -132,7 +127,6 @@
     <h1>Book Details</h1>
     <h2 id="selectedTitle"></h2>
   </div>
-
 
   <script src="js/data.js"></script>
   <script src="js/main.js"></script>
