--- a/index.html
+++ b/index.html
@@ -22,15 +22,15 @@
     <div class="col-lg-8 mx-auto visually" id="searchSection">
       <p class="lead mb-4 text-center text-navy">Welcome! What book would you like to read?</p>
       <form class="row row-cols-lg-auto g-3">
-        <label class="visually-hidden" for="inlineFormInputGroupUsername">Search Book Title</label>
+        <label class="visually-hidden" for="searchBookTitle">Search Book Title</label>
         <div class="input-group text-navy">
           <input type="text" class="text-navy form-control-styled" id="search" placeholder="Search Book Title">
         </div>
       </form>
       <p class="lead my-4 text-center text-navy">When do you want to finish your book?</p>
-      <div class="row my-4">
-        <div class="col-lg-3 my-2 needs-validation">
-          <select class="form-select-styled" aria-label="Default select example" id="validationCustom01" required>
+      <form class="row row-cols-lg-auto g-3">
+        <div class="col-lg-4 my-2 needs-validation">
+          <select class="form-select-styled" aria-label="Default select example" id="validationMonth" required>
             <option value="1" selected>January</option>
             <option value="2">February</option>
             <option value="3">March</option>
@@ -48,8 +48,8 @@
             Please select a valid month.
           </div>
         </div>
-        <div class="col-lg-3 my-2">
-          <select class="form-select-styled" aria-label="Default select example" id="validationCustom02" required>
+        <div class="col-lg-4 my-2">
+          <select class="form-select-styled" aria-label="Default select example" id="validationDate" required>
             <option value="1" selected>1</option>
             <option value="2">2</option>
             <option value="3">3</option>
@@ -86,8 +86,8 @@
             Please select a valid date.
           </div>
         </div>
-        <div class="col-lg-3 my-2">
-          <select class="form-select-styled" aria-label="Default select example" id="validationCustom03" required>
+        <div class="col-lg-4 my-2">
+          <select class="form-select-styled" aria-label="Default select example" id="validationYear" required>
             <option value="default" selected>Default</option>
             <option value="2023">2023</option>
             <option value="2024">2024</option>
@@ -99,7 +99,7 @@
           </div>
         </div>
         <ul id="user-list"></ul>
-      </div>
+      </form>
       <div class="row">
         <div class="col-lg-3 my-2">
           <button class="btn-primary btn-primary-gray float-start" id="theSubmitBtn">Submit</button>
@@ -111,13 +111,13 @@
   <div class="container visually-hidden" id="searchResultsSection">
     <h1 class="fw-bold text-center my-4 text-navy">Search Results</h1>
     <div class="row my-4">
-      <div class="col-lg-3 col-xs-6 text-center book" id="book0">
+      <div class="col-lg-3 col-md-6 text-center book" id="book0">
       </div>
-      <div class="col-lg-3 col-xs-6 text-center book" id="book1">
+      <div class="col-lg-3 col-md-6 text-center book" id="book1">
       </div>
-      <div class="col-lg-3 col-xs-6 text-center book" id="book2">
+      <div class="col-lg-3 col-md-6 text-center book" id="book2">
       </div>
-      <div class="col-lg-3 col-xs-6 text-center book" id="book3">
+      <div class="col-lg-3 col-md-6 text-center book" id="book3">
       </div>
     </div>
   </div>
